[metadata]
name = pymsbre
version = attr:pymsbre.__version__
author = Kodai Tooi
author_email = your-email@example.com
description = This project provides very easier setup and management for Minecraft server (Bedrock Edition). 
long_description = file:README.md
url = https://github.com/ktooi/pymsbre
license = MIT License
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    
[options]
zip_safe = False
packages = find:
install_requires =
  docker >= 4.4.0

[wheel]
universal = 1