[metadata]
name = pymcdbsc
version = attr:pymcdbsc.__version__
author = Kodai Tooi
author_email = your-email@example.com
description = This project provides very easier setup and management for Minecraft server (Bedrock Edition). 
long_description = file:README.md
url = https://github.com/ktooi/pymcdbsc
license_files = LICENSE
classifier =
    License :: OSI Approved :: MIT License
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
packages = find:
install_requires =
  docker >= 4.4.0
entry_points = file: entry_points.cfg

[wheel]
universal = 1